alignmentissue fixed8

--- a/respon.css
+++ b/respon.css
@@ -410,7 +410,8 @@ nav ul {
         flex-wrap: wrap;
     }
     .Exp, .Edu h1{
-        margin-left: 55px;
+        display: flex;
+        justify-content: center;
     }
     .project-img-container img{
         height: 324px;
